--- a/ecoDoer.css
+++ b/ecoDoer.css
@@ -165,6 +165,7 @@ header {
     background-image: url(img/MainHeader.jpg);/*source Adobe Stock*/
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat; 
     height: 95vh;
     background-attachment: fixed;
 }
